--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -11,16 +11,80 @@
 } */
 
 /* For Tablet View */
-@media screen and (min-device-width: 768px) and (max-device-width: 1024px) {
+@media screen and (min-device-width: 768px) and (max-device-width: 868px) {
     .footerLogo p {
-        /* margin: auto 0; */
-        width: 30% !important;
-        /* font-size: 21px; */
-        /* font-weight: 100; */
+        width: 38% !important;
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (min-device-width: 869px) and (max-device-width: 968px) {
+    .footerLogo p {
+        width: 33% !important;
+    }
+}
+
+@media screen and (min-device-width: 969px) and (max-device-width: 1025px) {
+    .footerLogo p {
+        width: 30% !important;
+    }
+}
+
+@media screen and (min-device-width: 1026px) and (max-device-width: 1160px) {
+    .footerLogo p {
+        width: 28% !important;
+    }
+}
+
+@media screen and (min-device-width: 1161px) and (max-device-width: 1300px) {
+    .footerLogo p {
+        width: 25% !important;
+    }
+}
+
+@media screen and (min-device-width: 1301px) and (max-device-width: 1415px) {
+    .footerLogo p {
+        width: 23% !important;
+    }
+}
+
+@media screen and (min-device-width: 1416px) and (max-device-width: 1550px) {
+    .footerLogo p {
+        width: 21% !important;
+    }
+}
+
+@media screen and (min-device-width: 1715px) and (max-device-width: 1915px) {
+    .footerLogo p {
+        width: 17% !important;
+    }
+}
+
+@media screen and (min-device-width: 1916px) and (max-device-width: 2140px) {
+    .footerLogo p {
+        width: 15% !important;
+    }
+}
+
+@media screen and (min-device-width: 2141px) and (max-device-width: 2328px) {
+    .footerLogo p {
+        width: 14% !important;
+    }
+}
+
+@media screen and (min-device-width: 2329px) and (max-device-width: 2500px) {
+    .footerLogo p {
+        width: 13% !important;
+    }
+}
+
+@media screen and (min-device-width: 2501px) and (max-device-width: 2650px) {
+    .footerLogo p {
+        width: 12% !important;
+    }
+}
+
+
+@media screen and (max-width: 767px) {
     .footerPage {
         width: 100% !important;
         height: auto;
@@ -125,6 +189,8 @@
     width: 100% !important;
     height: auto;
     padding: 0 !important;
+    /* position: fixed;
+    bottom: 0; */
 }
 
 .footerPageDiv {
