--- a/src/components/Magazine.css
+++ b/src/components/Magazine.css
@@ -26,7 +26,6 @@
     }
 
     .magzineDivCard {
-        width: 100% !important;
         margin: 15px 0px;
     }
 
@@ -36,12 +35,17 @@
     }
 
     .magazineMainInnerDiv {
+        width: auto !important;
         display: flex;
         justify-content: center !important;
     }
 
     .magImgCardStyle {
+        width: auto !important;
         margin: 30px 0px !important;
+        display: flex !important;
+        justify-content: center !important;
+        align-items: center !important;
     }
 
     .magzineHeadingNavDivOne {
