--- a/src/components/Team.css
+++ b/src/components/Team.css
@@ -11,10 +11,37 @@
 }
 
 
-
-@media screen and (min-device-width: 0px) and (max-device-width: 425px) {
+@media screen and (min-device-width: 0px) and (max-device-width: 274px) {
     .App {
         max-height: 40vh !important;
+    }
+
+    .teamTextH1 {
+        font-size: 30px !important;
+        font-weight: 600;
+    }
+}
+
+
+@media screen and (min-device-width: 275px) and (max-device-width: 320px) {
+    .App {
+        max-height: 40vh !important;
+    }
+
+    .teamTextH1 {
+        font-size: 32px !important;
+        font-weight: 600;
+    }
+}
+
+@media screen and (min-device-width: 321px) and (max-device-width: 425px) {
+    .App {
+        max-height: 40vh !important;
+    }
+
+    .teamTextH1 {
+        font-size: 34px !important;
+        font-weight: 600;
     }
 }
 
@@ -37,7 +64,7 @@
     }
 
     .teamTextH1 {
-        font-size: 60px !important;
+        font-size: 60px;
         font-weight: 600 !important;
         margin-top: 80px !important;
         margin-bottom: -20px !important;
@@ -87,7 +114,7 @@
     }
 
     .teamTextH1 {
-        font-size: 60px !important;
+        font-size: 60px;
         font-weight: 600 !important;
         margin-top: 0px !important;
     }
@@ -257,7 +284,7 @@
 
 
     .teamTextH1 {
-        font-size: 40px !important;
+        font-size: 40px;
         font-weight: 600 !important;
         margin-top: 40px !important;
     }
