--- a/src/components/Magazine.css
+++ b/src/components/Magazine.css
@@ -1,3 +1,29 @@
+.hidden {
+    opacity: 0;
+    filter: blur(5px);
+    transform: translateY(150px);
+    transition: all 1s;
+    /* position: relative;
+    transform: translateY(150px);
+    opacity: 0;
+    transition: all 1s ease; */
+}
+
+.show {
+    opacity: 1;
+    filter: blur(0);
+    transform: translateY(0);
+    /* transition-delay: all 2s ease;
+    transform: translateY(0px);
+    opacity: 1; */
+}
+
+@media(prefers-reduced-motion) {
+    .hidden {
+        transition: none;
+    }
+}
+
 @media screen and (min-device-width: 320px) and (max-device-width: 445px) {
     .magImgStyle {
         height: auto !important;
