--- a/src/components/Blog.css
+++ b/src/components/Blog.css
@@ -187,3 +187,22 @@
         margin: 0 0 35px 0 !important;
     }
 } */
+
+.hidden {
+    opacity: 0;
+    filter: blur(5px);
+    transform: translateY(150px);
+    transition: all 1s;
+}
+
+.show {
+    opacity: 1;
+    filter: blur(0);
+    transform: translateY(0);
+}
+
+@media(prefers-reduced-motion) {
+    .hidden {
+        transition: none;
+    }
+}
