--- a/src/components/Blogdemo/pages/editPost/EditPost.css
+++ b/src/components/Blogdemo/pages/editPost/EditPost.css
@@ -1,3 +1,22 @@
+.hidden {
+    opacity: 0;
+    filter: blur(5px);
+    transform: translateY(150px);
+    transition: all 1s;
+}
+
+.show {
+    opacity: 1;
+    filter: blur(0);
+    transform: translateY(0);
+}
+
+@media(prefers-reduced-motion) {
+    .hidden {
+        transition: none;
+    }
+}
+
 .editPostPost {
     flex: 9;
 }
