--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -200,3 +200,40 @@ input[type=number] {
     background-color: #d5fc39;
     color: black;
 }
+
+/* After Clicking Message */
+.message {
+    display: flex;
+    justify-content: center;
+}
+
+.message .success {
+    font-size: 30px;
+    text-align: center;
+    color: green;
+    animation: buttons .3s linear;
+    display: none;
+}
+
+.message .danger {
+    font-size: 30px;
+    text-align: center;
+    color: red;
+    transition: .3s;
+    animation: buttons .3s linear;
+    display: none;
+}
+
+@keyframes buttons {
+    0% {
+        transform: scale(0.1);
+    }
+
+    50% {
+        transform: scale(0.5);
+    }
+
+    100% {
+        transform: scale(1);
+    }
+}
